Customized user name and email

--- a/.gitconfig
+++ b/.gitconfig
@@ -26,5 +26,5 @@
 [tag]
 	sort = version:refname
 [user] 
-	name = Jussi Virtanen 
-	email = jussi.k.virtanen@gmail.com 
+	name = Atila Aliosmanov 
+	email = atispor@gmail.com 
