Disabled NerdTree auto-opening

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -7,3 +7,6 @@ set -g renumber-windows on
 set -g status-right "%Y-%m-%d %H:%M"
 
 bind c new-window -c "#{pane_current_path}"
+set -g mouse on
+set -g renumber-windows on
+set -g status-right "#(date +\"%Y-%m-%d %H:%M\")"
